Development history / change log, please read from bottom up

Version 2.90 - xx yy 2011
update SWT to 3.7 final stable release
make bluetooth serial ports recognition configurable
update device properties XSD to version 14


Version 2.84 - 04 Jul 2011

fix error in UltraDuoPlus dialog restore of backup functionality
fix error in UltraDuoPlus dialog while sync date PC-Device
enable deletion of application settings
documentation update

Version 2.83 - 20 Jun 2011

refine time line to support days, month and years as period
update UltraDuoPlus dialog to read battery cycle data
update UltraDuoPlus dialog to read battery graphics
enable data correction of red battery cycle data
circumvent java 1.6 update 26 problem with splash and file dialog
correct copying graphics content to clipboard
update documentation



Version 2.82 - 03 Jun 2011

UltramatTrioPlus devices fix bug while data gathering output channel 3
Ultramat16/16S/18 correct sycnc_ref_ordinal typo in English config XML 
add UltraDuoPlus40
add UltraDuoPlus50
QC-Copter fix problem adding new data set while data gathering
UniLog/LiPoWatch update code to prevent mixing record sets sequence 
UniLog refine efficiency calculation, fix typo in device XML
 - correct UniLog mA/m calculation  
 - fix UniLog dialog parameter update problems
fix menu cool bar order problem
while data gathering and creating new record sets take over visualization properties from previous active record set
update device XMLs to reflect difference between Altitude and Height (English only)
enable back level version usage parallel installation in respect of configuration XMLs update (future versions only)
fix error handling record properties, used by UniLog and Picolario



Version 2.81 - 15 May 2011

update Graupner Ultra Duo Plus 60 to select object key in dependency of battery memory
add Graupmer Ultramat 12
add Graupmer Ultramat 16
add Graupmer Ultramat 16S
add Graupmer Ultramat Trio Plus 14
add Graupmer Ultramat Trio Plus 16S