@@ -171,7 +171,7 @@
 		<ant antfile="build.xml" target="clean" dir="GPS-Logger" inheritall="true" />
 		<ant antfile="build.xml" target="clean" dir="NMEA-Adapter" inheritall="true" />
 		<ant antfile="build.xml" target="clean" dir="UltramatUDP" inheritall="true" />
-		<!-- ant antfile="build.xml" target="clean" dir="HoTTAdapter" inheritall="true" /-->
+		<ant antfile="build.xml" target="clean" dir="HoTTAdapter" inheritall="true" />
 		<!-- add new device here -->
 	</target>
 
@@ -273,7 +273,7 @@
 		<ant antfile="build.xml" target="package" dir="GPS-Logger" inheritall="true" />
 		<ant antfile="build.xml" target="package" dir="NMEA-Adapter" inheritall="true" />
 		<ant antfile="build.xml" target="package" dir="UltramatUDP" inheritall="true" />
-		<!-- ant antfile="build.xml" target="package" dir="HoTTAdapter" inheritall="true" /-->
+		<ant antfile="build.xml" target="package" dir="HoTTAdapter" inheritall="true" />
 		<!-- add new device here -->
 	</target>
 
@@ -292,7 +292,7 @@
 			<include name="GPS-Logger/build/*.jar" />
 			<include name="NMEA-Adapter/build/*.jar" />
 			<include name="UltramatUDP/build/*.jar" />
-			<!-- include name="HoTTAdapter/build/*.jar" /-->
+			<include name="HoTTAdapter/build/*.jar" />
 			<!-- add new device here -->
 		</patternset>
 	</fileset>
