@@ -4,6 +4,7 @@ Version 2.90 - xx yy 2011
 update SWT to 3.7 final stable release
 make bluetooth serial ports recognition configurable
 update device properties XSD to version 14
+add HoTTAdapter implementation
 
 
 Version 2.84 - 04 Jul 2011
